--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,51 @@
 
 services:
+  # tailscale-linkstack:
+  #   image: tailscale/tailscale:latest # Image to be used
+  #   container_name: tailscale-${SERVICE} # Name for local container management
+  #   hostname: ${SERVICE} # Name used within your Tailscale environment
+  #   environment:
+  #     - TS_AUTHKEY=${TS_AUTHKEY}
+  #     - TS_STATE_DIR=/var/lib/tailscale
+  #     - TS_SERVE_CONFIG=/config/serve.json # Tailsacale Serve configuration to expose the web interface on your local Tailnet - remove this line if not required
+  #     - TS_USERSPACE=false
+  #     - TS_ENABLE_HEALTH_CHECK=true              # Enable healthcheck endpoint: "/healthz"
+  #     - TS_LOCAL_ADDR_PORT=127.0.0.1:41234       # The <addr>:<port> for the healthz endpoint
+  #     - TS_HOSTNAME=TS-${SERVICE} # Name used within your Tailscale environment
+  #     - TS_EXTRA_ARGS=--accept-dns=false # Tailscale configuration options
+  #   volumes:
+  #     - ${PWD}/config:/config # Config folder used to store Tailscale files - you may need to change the path
+  #     - ${PWD}/ts/state:/var/lib/tailscale # Tailscale requirement - you may need to change the path
+  #   devices:
+  #     - /dev/net/tun:/dev/net/tun # Network configuration for Tailscale to work
+  #   cap_add:
+  #     - net_admin # Tailscale requirement
+  #     - sys_module # Tailscale requirement
+  #   dns:
+  #     - 1.1.1.1
+  #   healthcheck:
+  #     test: ["CMD", "wget", "--spider", "-q", "http://127.0.0.1:41234/healthz"] # Check Tailscale has a Tailnet IP and is operational
+  #     interval: 10m # How often to perform the check
+  #     timeout: 10s # Time to wait for the check to succeed
+  #     retries: 3 # Number of retries before marking as unhealthy
+  #     start_period: 10s # Time to wait before starting health checks
+  #   restart: always
+
+
   linkstack:
     build: .  # Build the image using the Dockerfile in the current directory
     container_name: linkstack
     volumes:
       - ./conf.json:/app/conf.json
       - ./templates:/app/templates
+      - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - "${TAILSCALE_IP}:8087:8080"
-    restart: unless-stopped
+    restart: always
+    # network_mode: "service:tailscale-linkstack"
+    # depends_on:
+    #   tailscale-linkstack:
+    #     condition: service_healthy
+
+  
+  
